tests/NormalTests/paczka1/small_fuzzy/59553292.err
Error in line 1: E7ihUw S478 67,9
Error in line 2: E7ihUw S75 48,0
Error in line 9: szvppK3 S478 69,4
